// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should add and remove links 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW kPkTEe flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-neutral-dark"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4"
    >
      <div
        class="grid row-gap-4 col-gap-2"
        style="grid-template-columns: 40% 60%;"
      >
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
            data-testid="FormLabel"
            for="type"
          >
            Add media
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="relative w-full"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
              data-testid="select-list__input"
              name="type"
              readonly=""
              type="text"
              value="twitter"
            />
            <div
              class="relative w-full cursor-pointer"
            >
              <div>
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-1-label downshift-1-toggle-button"
                  class="sc-fzplWN jAabRP  is-selected "
                  data-testid="select-list__toggle-button"
                  id="downshift-1-toggle-button"
                  type="button"
                >
                  Twitter
                </button>
                <ul
                  aria-labelledby="downshift-1-label"
                  class="sc-fznyAO dPDaFu"
                  id="downshift-1-menu"
                  role="listbox"
                  tabindex="-1"
                />
              </div>
              <div
                class="sc-AxhUy sc-AxheI bYHtKZ w-10 pointer-events-none text-theme-neutral"
              >
                <div
                  class="sc-AxiKw iDEwuj"
                  height="8"
                  width="8"
                >
                  <svg>
                    arrowdown.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
            data-testid="FormLabel"
            for="value"
          >
            Link
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <input
            aria-invalid="false"
            class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
            data-testid="LinkCollection__input-link"
            name="value"
          />
        </fieldset>
        <button
          class="sc-AxjAm fPpool col-span-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-dark"
      >
        Your media
      </div>
      <div
        class="sc-fznKkj kEVFfm"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-color-neutral"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-color-neutral"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                     
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW kPkTEe flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-neutral-dark"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should select a specific link type 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW kPkTEe flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-neutral-dark"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4"
    >
      <div
        class="grid row-gap-4 col-gap-2"
        style="grid-template-columns: 40% 60%;"
      >
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
            data-testid="FormLabel"
            for="type"
          >
            Add media
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="relative w-full"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 sr-only"
              data-testid="select-list__input"
              name="type"
              readonly=""
              type="text"
              value=""
            />
            <div
              class="relative w-full cursor-pointer"
            >
              <div>
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-15-label downshift-15-toggle-button"
                  class="sc-fzplWN jAabRP   "
                  data-testid="select-list__toggle-button"
                  id="downshift-15-toggle-button"
                  type="button"
                />
                <ul
                  aria-labelledby="downshift-15-label"
                  class="sc-fznyAO dPDaFu"
                  id="downshift-15-menu"
                  role="listbox"
                  tabindex="-1"
                />
              </div>
              <div
                class="sc-AxhUy sc-AxheI bYHtKZ w-10 pointer-events-none text-theme-neutral"
              >
                <div
                  class="sc-AxiKw iDEwuj"
                  height="8"
                  width="8"
                >
                  <svg>
                    arrowdown.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
            data-testid="FormLabel"
            for="value"
          >
            Link
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <input
            aria-invalid="false"
            class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
            data-testid="LinkCollection__input-link"
            name="value"
          />
        </fieldset>
        <button
          class="sc-AxjAm fPpool col-span-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="mt-8 mb-2 text-sm text-theme-neutral-dark"
      >
        Your media
      </div>
      <div
        class="sc-fznKkj kEVFfm"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Primary
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-color-neutral"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-color-neutral"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-color-neutral"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="text-sm text-left select-none text-theme-neutral"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                     
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="font-semibold border-b border-theme-neutral-200"
            >
              <td
                class="w-16 text-center align-middle pb-6 pt-2"
              >
                <input
                  class="sc-fzpans ioBrsH"
                  color="success"
                  data-testid="LinkCollection__selected"
                  type="radio"
                />
              </td>
              <td
                class="w-40 pb-6 pt-2 align-middle"
              >
                <input
                  name="links[0].type"
                  type="hidden"
                  value="twitter"
                />
                Twitter
              </td>
              <td
                class="break-all align-middle pb-6 pt-2"
              >
                <input
                  name="links[0].value"
                  type="hidden"
                  value="testing link"
                />
                testing link
              </td>
              <td
                class="w-16 text-right align-middle pb-4"
              >
                <button
                  class="sc-AxjAm gBWztV"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="font-semibold border-b border-theme-neutral-200"
            >
              <td
                class="w-16 text-center align-middle py-6"
              />
              <td
                class="w-40 py-6"
              >
                <input
                  name="links[1].type"
                  type="hidden"
                  value="facebook"
                />
                Facebook
              </td>
              <td
                class="break-all align-middle py-6"
              >
                <input
                  name="links[1].value"
                  type="hidden"
                  value="testing link 2"
                />
                testing link 2
              </td>
              <td
                class="w-16 text-right align-middle false"
              >
                <button
                  class="sc-AxjAm gBWztV"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should toggle open/close of link collection 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW kPkTEe flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-neutral-dark"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;
